<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="URL_PRODUCTION">https://www.school2biz.com</string>
    <string name="TARGET_PRODUCTION">https://www.school2biz.com/api/</string>
    <string name="URL_DEV">http://ceti-test-env.elasticbeanstalk.com</string>
    <string name="TARGET_DEV">http://ceti-test-env.elasticbeanstalk.com/api/</string>

    <string name="facebook_app_id">530937237063329</string>

    <string name="facebook">com.facebook.katana</string>
    <string name="twitter">com.twitter.android</string>
    <string name="linkedin">com.linkedin.android</string>

    <string name="app_name">School-Business</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_test2">Test2</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_create_request">Create Request</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_event2">Event2Activity</string>
    <string name="activity_json_request_btn_request">JSON request</string>
    <string name="title_activity_school_search">SchoolSearch</string>
    <string name="title_activity_school_search_results">SchoolSearchResults</string>
    <string name="title_activity_school_view">SchoolViewActivity</string>

    <!-- School View Strings -->
    <string name="address">Address: </string>
    <string name="city">City: </string>
    <string name="state">State: </string>
    <string name="zip">Zip: </string>
    <string name="phone">Phone: </string>
    <string name="title_activity_user_view">UserViewActivity</string>

    <!-- User View Strings -->
    <string name="school">School: </string>
    <string name="grades">Grades: </string>
    <string name="business">Business: </string>
    <string name="job">Job Title: </string>
    <string name="role">Role: </string>
    <string name="bio">Biography: </string>
    <string name="blank"></string>
    <string name="title_activity_event_view">EventViewActivity</string>

    <!-- role Strings -->
    <string name="teacher">Teacher</string>
    <string name="speaker">Speaker</string>
    <string name="both">Both</string>

    <string name="notifications">notifications</string>
    <string name="events">events</string>
    <string name="users">users</string>
    <string name="schools">schools</string>
    <string name="claims">claims</string>
    <string name="welcome">Welcome to Events!</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_event_frag">EventFragActivity</string>
    <string name="search_title">Search Title</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_event">Are you sure you want to delete this event?</string>

    <string name="success_message">Message Sent Successfully!</string>
    <string name="failure_message">Message Failed To Send</string>

    <string name="awarded_badge"> was awarded a badge!</string>


    <string name="straboutlink">The School business app is developed by <a href="http://www.ontoborn.com">Ontoborn Technologies LLC </a> in coordination with CETI of The Ohio State University in partnership  with Delphos City Schools, and is funded by the Straight A Grant. Development Contributors: Jithendra Kumar Rangaraj, Babu, Kamalesh, Balakumar Murthy, Agustin Oritz Special thanks to Dr. Rajiv Ramnath Support. </string>
    
</resources>
