<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.school_business.android.school_business.SchoolViewActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="School Name"
        android:id="@+id/textViewName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/address"
        android:id="@+id/textViewAddress"
        android:layout_below="@+id/textViewName"
        android:layout_toRightOf="@+id/scrollView"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/city"
        android:id="@+id/textViewCity"
        android:layout_below="@+id/textViewAddress"
        android:layout_toRightOf="@+id/scrollView"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/state"
        android:id="@+id/textViewState"
        android:layout_below="@+id/textViewCity"
        android:layout_toRightOf="@+id/scrollView"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zip"
        android:id="@+id/textViewZip"
        android:layout_below="@+id/textViewState"
        android:layout_toRightOf="@+id/scrollView"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/phone"
        android:id="@+id/textViewPhone"
        android:layout_below="@+id/textViewZip"
        android:layout_toRightOf="@+id/scrollView"/>
</RelativeLayout>
